--- a/css/styles.css
+++ b/css/styles.css
@@ -3,17 +3,26 @@
 }
 
 #cookieAdder {
-  align-items: center;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin: 20px;
+  border-right: 1px solid #888787;
+  border-bottom: 1px solid #888787;
+  border-left: 1px solid #888787;
+  border-top: none;
 }
+#cookieAdder legend {
+  pos
+}
+
 
 #cookieAdder fieldset {
   display: flex;
   justify-content: space-between;
-  width: 80%;
+  margin-top: 30px;
+  width: 100%;
   align-items: center;
 }
 
@@ -22,11 +31,20 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  width: 100%;
 }
+
+#cookieAdder input[type="text"],
+#cookieAdder input[type="number"] {
+  width: 80px;
+  height: 20px;
+}
+
 
 #cookieAdder label {
   text-align: right;
-  font-size: 14px;
+  font-size: 10px;
+  font-weight: bolder;
 /* border: solid red 5px; */
 }
 
@@ -82,8 +100,8 @@ main {
 table {
   border-collapse: collapse;
   border: 1px solid #888787;
-  margin: 20px 0;
-  width: 100%;
+  margin: 3em;
+  max-width: 100%;
 }
 
 thead th {
