--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,6 @@
   text-align: right;
   font-size: 10px;
   font-weight: bolder;
-/* border: solid red 5px; */
 }
 
 
@@ -61,16 +60,17 @@ header h1 {
 
 header nav {
   background-color: #fa8072;
+  display: flex;
+  justify-content: center;
+  max-width: 100%;
 }
 
-img {
-  display: block;
-  margin: 0 auto;
-}
+
 
 header .links ul {
   list-style: none;
   text-align: left;
+  padding-bottom: 10px;
 }
 
 header .links li {
@@ -86,14 +86,18 @@ header .links a {
 footer {
   background-color: #cccccc;
   color: #0a0a0a;
+  display: flex;
   text-align: center;
   width: 100%;
-  position: fixed;
+  position: relative;
+padding-top: 10px;
   bottom: 0;
 }
 
 main {
-  padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 
@@ -136,6 +140,7 @@ tfoot td {
   display: flex;
   flex-direction: column;
   margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .store h2 {
@@ -149,4 +154,15 @@ tfoot td {
 
 .store li {
   padding: 0.2em;
+}
+
+.salmon {
+  max-width: 100%;
+  height: auto;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+
+
 }
